added modified file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <input class="vegsold" type="number" placeholder="eg. 0.00">
             </div>
             <div class="button">
-                <button class="button-primary calculate" type="button" name="button">Enter</button>
+                <button class="calculate" type="button" name="button">Enter</button>
             </div>
 
         </div>
