--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1>The Vendor's Products Statistics Keeper</h1>
 
         <div class="Products">
-            <input type="radio" name="Goods" value="eggs">Eggs
-            <input type="radio" name="Goods" value="fruits"> Fruits
-            <input type="radio" name="Goods" value="veggies"> Veggies
+            <input type="radio" name="Goods" class="radio radioEggs" value="eggs">Eggs
+            <input type="radio" name="Goods" class="radio" value="fruits"> Fruits
+            <input type="radio" name="Goods" class="radio" value="veggies"> Veggies
             <div class="buttonCalculate">
                 <button class="button-primary calculateButton" type="button" name="button">Calculate</button>
             </div>
@@ -50,7 +50,7 @@
             <div class="profitTotals">
                 <div class="theggsProfit">
                     <h4>Eggs Profit</h4>
-                    <input class="eggProfit" type="number" placeholder="eg. 0.00">
+                    <input class="eggProfit"  placeholder="eg. 0.00">
                 </div>
                 <div class="thefruitProfit">
                     <h4>Fruit Profit</h4>
@@ -88,8 +88,10 @@
 
 
     </div>
-    <script src="./VendorsStat.fact.js" charset="utf-8"></script>
-    <script src="JS/VendorsStat.dom.js" charset="utf-8">  </script>
+    <!-- <script src="./VendorsStat.fact.js" charset="utf-8"></script> -->
+    <!-- <script src="JS/VendorsStat.dom.js" charset="utf-8">  </script> -->
+     <script src="./test.js" charset="utf-8"></script> 
+     <script src="./JS/test.dom.js" charset="utf-8">  </script>
 
 </body>
 
