--- a/Test/index.html
+++ b/Test/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mocha tests</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.css"
+    />
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.min.js" charset="utf-8"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.min.js"
+      charset="utf-8"
+    ></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
-
-</head>
-<body>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
+  </head>
+  <body>
     <div id="mocha"></div>
     <script>
-         mocha.setup('bdd');
-         var assert = chai.assert;
+      mocha.setup("bdd");
+      var assert = chai.assert;
     </script>
     <script src="../VendorsStat.fact.js"></script>
     <script src="./VendorsStat.test.js"></script>
-   
 
-
- <script>
-    mocha.checkLeaks();
-    mocha.run();
-</script>
-
-</body>
+    <script>
+      mocha.checkLeaks();
+      mocha.run();
+    </script>
+  </body>
 </html>
