added modified files

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
                 <button class="button-primary calculateButton" type="button" name="button">Calculate</button>
             </div>
         </div>
-       
+       <div class="soldPrice">
+           <ul type="circle">
+               <li>EggsPrice = R50</li>
+               <li>FruitPrice = R30</li>
+               <li>VeggiesPrice = R40</li>
+           </ul>
+
+       </div>
 
         <div class="soldProductRecord">
             <div class="theEggs">
